--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@ align-baseline,top,middle,bottom,text-top,text-bottom : Vertical alignment of in
       <div class="col-md-12 text-center text-white">
     <h1>Signup For Our Newsletter</h1>
     <p>Nostrud aliquip deserunt labore aliqua ea mollit culpa reprehenderit mollit esse ipsum velit eu.</p>
-    <form class="form-inline justify-content-center">
+    <form name="contact" method="POST" data-netlify="true" class="form-inline justify-content-center">
       <label for="name" class="sr-only">Name</label>
-        <input class="form-control mr-sm-2 mb-2 mb-sm-0" type="text" id="name" placeholder="Enter Name">
+        <input class="form-control mr-sm-2 mb-2 mb-sm-0" type="text" id="name" placeholder="Enter Name" name="name">
         <label for="email" class="sr-only">Email</label>
-        <input class="form-control mr-sm-2 mb-2 mb-sm-0" type="email" id="email" placeholder="Enter Email">
+        <input class="form-control mr-sm-2 mb-2 mb-sm-0" type="email" id="email" placeholder="Enter Email" name="email">
         
         <button class="btn btn-primary mt-2 mt-sm-0" type="submit">Submit</button>
     </form>
